# dolly-cam

./: .gitignore  README.md  config.example.toml  main.py  metadata_extractor.py  pyproject.toml  requirements.txt  ring_camera.py  storage_manager.py  visualize_tracker_data.py
deploy/: ring-camera.service
recordings/: dog_tracking_20260213_211104_seg0000.json  dog_tracking_20260213_211211_seg0001.json  motion_20260218_180104_115526.json  motion_20260218_180149_309322.json  motion_20260218_180234_544717.json  motion_20260218_180319_690009.json  motion_20260218_180530_749142.json  motion_20260218_180615_936594.json  motion_20260218_180647_546366.json  motion_20260218_180732_732392.json  motion_20260218_180818_330622.json  motion_20260218_180846_223981.json  motion_20260218_180929_702692.json  motion_20260218_180944_159219.json  motion_20260218_181015_385062.json  motion_20260218_181022_766910.json  motion_20260218_181032_848117.json  motion_20260218_181118_059483.json  motion_20260218_181203_239217.json  motion_20260218_181851_263699.json  motion_20260218_181920_913016.json  motion_20260218_181949_001738.json  motion_20260218_182003_766183.json  segments.jsonl
recordings/highlights/: index.jsonl
reports/: dog_tracker_report.html  home_camera_report.html
scripts/: remote_view_control.sh
src/dolly_cam/: __init__.py  app.py  config.py  gui.py  recording.py  uploader.py  video.py
